--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sanity/core": "^2.30.3",
     "@sanity/image-url": "^1.0.1",
     "@stripe/stripe-js": "^1.32.0",
+    "check-node-version": "^4.2.1",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
